	PR tree-optimization/47155 	* tree-ssa-ccp.c (bit_value_binop_1): Use r1type instead of type 	when computing uns.

* gcc.c-torture/execute/pr47155.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168440 138bc75d-0d04-0410-961f-82ee72b054a4